# thesis_vgi

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
common/: CMakeLists.txt
common/include/: FileStreamPool.hpp  ScopedTimer.hpp  Shader.hpp  StaticThreadPool.hpp  UniqueVmaBuffer.hpp  UniqueVmaImage.hpp  Utility.hpp  VkHelpers.hpp
common/src/: ResourceCounter.cpp  StaticThreadPool.cpp  UniqueVmaBuffer.cpp  UniqueVmaImage.cpp  Utility.cpp  VkHelpers.cpp
converter/: CMakeLists.txt
converter/shaders/: resampling.frag  resampling.vert
converter/src/: DataTypes.hpp  DualSurfaceGraph.cpp  DualSurfaceGraph.hpp  Parametrization.cpp  Parametrization.hpp  ProcessPlain.cpp  ProcessPlain.hpp  SurfaceGraph.cpp  SurfaceGraph.hpp  SymmetricPair.hpp  ToPlainConverters.cpp  TupleHash.hpp  main.cpp
converter/src/clustering/: Clustering.cpp  Clustering.hpp  EdgeStraightening.cpp  EdgeStraightening.hpp  Gridify.cpp  Gridify.hpp  InCoreClustering.cpp  InCoreClustering.hpp  OutOfCoreClustering.cpp  Quadrangulation.cpp  Quadrangulation.hpp
converter/src/resampling/: Resampler.cpp  Resampler.hpp
include/common/: ResourceCounter.hpp  StaticThreadPool.hpp  UnboundedBlockingMPMCQueue.hpp
renderer/: CMakeLists.txt
renderer/shaders/: debug.frag  debug.vert  phong.frag  static.frag  static.vert  vgi.frag  vgi.geom  vgi.tesc  vgi.tese  vgi.vert
renderer/src/: Application.cpp  Application.hpp  EigenHelpers.hpp  HierarchicalAtlas.cpp  OutOfCoreTextureManager.cpp  OutOfCoreTextureManager.hpp  Renderer.cpp  Renderer.hpp  UniqueStbImage.cpp  UniqueStbImage.hpp  main.cpp
renderer/src/rendering/: Camera.cpp  Camera.hpp  Gui.cpp  Gui.hpp  HierarchicalAtlas.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneObjectBase.cpp  SceneObjectBase.hpp  Shader.cpp  VMesh.cpp  ViewMode.hpp
renderer/src/rendering/data_primitives/: DescriptorSetRing.cpp  DescriptorSetRing.hpp  RingBuffer.cpp  RingBuffer.hpp  Texture.cpp  Texture.hpp  VirtualTextureSet.cpp  VirtualTextureSet.hpp
renderer/src/rendering/scene_objects/: Grid.cpp  Grid.hpp  StaticMesh.cpp  StaticMesh.hpp  Tangible.cpp  Tangible.hpp  VMesh.cpp  VMesh.hpp
renderer/src/rendering/vgi/: AtlasPatch.cpp  AtlasPatch.hpp  GeometryImage.cpp  GeometryImage.hpp  HierarchicalAtlas.cpp  HierarchicalAtlas.hpp
src/common/: StaticThreadPool.cpp
src/converter/: Clustering.cpp  Clustering.hpp  DataTypes.hpp  DebugException.hpp  DisjointSetUnion.hpp  ExternalPartBreaker.cpp  ExternalPartBreaker.hpp  Gridify.cpp  Gridify.hpp  InCoreClustering.cpp  InCoreClustering.hpp  ObjParsingHelpers.hpp  OutOfCoreClustering.cpp  OutOfCoreClustering.hpp  Parametrization.cpp  Parametrization.hpp  ProcessPlain.cpp  ProcessPlain.hpp  SurfaceGraph.hpp  SurfaceHashTable.hpp  ToPlainConverters.cpp  ToPlainConverters.hpp  TupleHash.hpp  main.cpp
src/converter/clustering/: ClusterPlain.cpp  ClusterPlain.hpp  Clustering.cpp  Clustering.hpp  Gridify.cpp  InCoreClustering.cpp  InCoreClustering.hpp  OutOfCoreClustering.cpp  Quadrangulate.cpp  Quadrangulate.hpp  Quadrangulation.cpp  Quadrangulation.hpp
src/renderer/: main.cpp
text/: .gitignore  article.tex  bibliography.bib  build.sh  conclusion.tex  diploma.tex  intro.tex  latexmkrc  main.tex  results.tex
text/diploma/: conclusion.tex  intro.tex  main.tex
tools/: blender_import_geometry_image.py  blender_import_pts.py  blender_import_pts_clustered.py  blender_import_pts_parametrized.py  colored_cube.blend  colored_cube.blend1  ssim_compare.py  textured_cube.blend
